Validando datos paciente antes de ingresarlos a la tabla - add function exhibirMensajeErrores en form.js

--- a/css/index.css
+++ b/css/index.css
@@ -156,3 +156,8 @@ button[disabled=disabled], button:disabled {
 .invisible{
 	display:none;
 }
+
+#mensajes-errores{
+	color: lightcoral;
+	background-color:#f5f0c8;
+}
